docs: fix CLI Tools introspect example (fictional path + missing JDK 17 flags)
The CLI Tools section existed but had two bugs that made copy-paste
fails for a new user:

1. Fictional path "data/orders.csv" — no such file. The actual demo data
   is at examples/starter/data/{flights,carriers}.csv. A user copying the
   example would get a "file not found" error.

2. Missing JDK 17 --add-opens flags. introspect uses Spark, but
   `mvn exec:java` does not propagate the pom's exec-maven-plugin
   JAVA_TOOL_OPTIONS (verified per runtime-quickstart.md trap #1). A
   user copying the example would hit a sun.nio.ch.DirectBuffer access
   error. docsgen doesn't need Spark so it works; introspect doesn't.

Fixes:
- introspect example now uses examples/starter/data/flights.csv and
  model name "flights" (the actual demo data).
- Add a one-paragraph "Note" below the introspect block calling out
  the JDK 17 / Spark flag requirement, with a link to the canonical
  trap #1 doc and a note that docsgen is unaffected.

No code change. 150/150 still green.